# PyPixoo

./: .gitignore  .gitmodules  LICENSE.md  README.md  pyproject.toml
docs/: Dockerfile  _config.yml
docs/_documentation/: authentication.md  getting_started.md  installation.md
docs/_methods/: brightness.md  countdown.md  currentChannel.md  getChannel.md  selectChannel.md
pypixoo/: device.py  error_messages.py
