[tool.poetry]
name = "pixoo-control"
version = "0.1.0"
description = "Python wrapper for interacting with the Pixoo64"
authors = ["JP Etcheber <jetcheber@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "pixoo_control"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
