[tool.poetry]
name = "pypixoo"
description = "Python wrapper for interacting with the Pixoo64"
authors = ["JP Etcheber <jetcheber@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "pypixoo"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true